[gd_scene load_steps=3 format=3 uid="uid://dsxeoewaiey1l"]

[ext_resource type="Script" path="res://scripts/GUI.gd" id="1_1v37e"]
[ext_resource type="Texture2D" uid="uid://bd2peqstwdn28" path="res://assets/red_heart.png" id="1_y2hts"]

[node name="Gui" type="Node2D"]
script = ExtResource("1_1v37e")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer2" type="PanelContainer" parent="CanvasLayer"]
layout_direction = 2
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -170.0
offset_bottom = 97.0
grow_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/PanelContainer2/MarginContainer"]
layout_mode = 2
columns = 2

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/PanelContainer2/MarginContainer/GridContainer"]
layout_mode = 2
expand_mode = 2
stretch_mode = 4

[node name="score_label" type="Label" parent="CanvasLayer/PanelContainer2/MarginContainer/GridContainer"]
layout_mode = 2
tooltip_text = "Score"
mouse_filter = 0
theme_override_font_sizes/font_size = 32
text = "000000"

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/PanelContainer2/MarginContainer/GridContainer"]
layout_mode = 2
tooltip_text = "Lives"
texture = ExtResource("1_y2hts")
expand_mode = 2
stretch_mode = 4

[node name="lives_label" type="Label" parent="CanvasLayer/PanelContainer2/MarginContainer/GridContainer"]
layout_mode = 2
tooltip_text = "Lives"
mouse_filter = 0
theme_override_font_sizes/font_size = 20
text = "3"
horizontal_alignment = 2
